fixed overflow of trash buttons and other minor adjustments

--- a/static/styles/cv-list.css
+++ b/static/styles/cv-list.css
@@ -82,15 +82,16 @@ section#cv-list div.results ul li {
 }
 
 section#cv-list div.results ul li div.candidate-picture  {
-    border-radius: 2000px;
+    border-radius: 50%;
     flex-basis:50px;
     max-width:150px;
     margin:auto;
     margin-bottom:20px;
+    border:3px solid #ababab;
 }
 
 section#cv-list div.results ul li div.candidate-picture img{
-    border-radius:2000px;
+    border-radius:50%;
     width:100%;
     height:100%;
 }
