--- a/static/styles/main-style.css
+++ b/static/styles/main-style.css
@@ -25,6 +25,7 @@ a.button, button {
     display: inline-block;
     border-radius: 5px;
     height:55px;
+    cursor: pointer;
 }
 
 a.button:hover, button:hover {
